[gd_scene load_steps=4 format=3 uid="uid://di8w6kkegrnvi"]

[ext_resource type="Script" uid="uid://bfejbc0pun6e6" path="res://scenes/pages/sheet_setup_page.gd" id="1_fmdki"]
[ext_resource type="Resource" uid="uid://brhmq0gpq31p5" path="res://resources/sheet/sheet_data_default.tres" id="2_hy83y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hy83y"]

[node name="SheetSetupPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fmdki")
data = ExtResource("2_hy83y")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ButtonBack" type="Button" parent="Panel/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
text = "<"

[node name="Title" type="Label" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sheet Setup 📜⚙️"
horizontal_alignment = 1

[node name="VSeparator" type="VSeparator" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 72
theme_override_styles/separator = SubResource("StyleBoxEmpty_hy83y")

[node name="ReferenceRect" type="ReferenceRect" parent="Panel/VBoxContainer/HBoxContainer2/VSeparator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
border_color = Color(0.54, 0.54, 0.54, 1)
border_width = 2.0

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 48

[node name="Panel" type="Panel" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PropertyList" type="HFlowContainer" parent="Panel/VBoxContainer/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="button_down" from="Panel/VBoxContainer/HBoxContainer2/ButtonBack" to="." method="_on_button_back_button_down"]
